# Search_hh_work

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/api/: hh_api.py
src/color/: color.py
src/create_db/: create_db.py
src/dbmanager_class/: dbmanager.py
tests/: test_create_db.py  test_dbmanager.py  test_hh_api.py
